platform/base/api-namespace/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: istio-system
spec:
  hosts:
    - '*'
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /graphql
      route:
        - destination:
            host: api.api.svc.cluster.local
            port:
              number: 3000
